[package]
name = "dit"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = "1"
serde_json = "1"
uuid = { version = "0", features = ["serde", "v4"] }
rust-crypto = "0.2"
libsecp256k1 = "0.3.2"
toml = "0.5"
lazy_static = "1"
clap = { version = "2.33", features = ["yaml"] }
curv = { package = "curv-kzen", version = "0.7", default-features = false }
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = "0.4.2"
reqwest = { version = "0.9", default-features = false }
sha-1 = "0.9"


[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.10"
default-features = false


[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.4.6"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[profile.release]
opt-level = 2
